# dnd-rolltable

./: README.md  example.yaml  fixup  pyproject.toml
rolltable/: cli.py  tables.py  types.py
rolltable/sources/: encounters.yaml  psychadelic_effects.yaml  spells.yaml  trinkets.yaml  wild_magic.yaml
tests/: test_tables.py
