[tool.poetry]
name = 'dnd-rolltable'
version = '1.1.9'
license = 'The Unlicense'
authors = ['Greg Boyington <evilchili@gmail.com>']
description = 'Generate roll tables using weighted random distributions'
packages = [
   { include = 'rolltable' }
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "latest"
rich = "latest"
pyyaml = "latest"
pytest = "latest"
csv2md = "latest"


[tool.poetry.scripts]
roll-table = "rolltable.cli:app"


[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'
