[tool.poetry]
name = 'dnd-rolltable'
version = '1.1.1'
license = 'The Unlicense'
authors = ['Greg Boyington <evilchili@gmail.com>']
description = 'Generate roll tables using weighted random distributions'
packages = [
   { include = 'rolltable' }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.0"
pyyaml = "^6.0.1"
csv2md = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
roll-table = "rolltable.cli:app"


[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'
