[tool.poetry]
name = 'dnd-rolltable'
version = '1.1.1'
license = 'The Unlicense'
authors = ['Greg Boyington <evilchili@gmail.com>']
description = 'Generate roll tables using weighted random distributions'
packages = [
   { include = 'rolltable' }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.0"
pyyaml = "^6.0.1"
csv2md = "^1.2.0"
random_sets = { git = "https://github.com/evilchili/random-sets", branch="main" }

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.3.0"
isort = "^5.12.0"
pyproject-autoflake = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[tool.autoflake]
check = false                        # return error code if changes are needed
in-place = true                      # make changes to files instead of printing diffs
recursive = true                     # drill down directories recursively
remove-all-unused-imports = true     # remove all unused imports (not just those from the standard library)
ignore-init-module-imports = true    # exclude __init__.py when removing unused imports
remove-duplicate-keys = true         # remove all duplicate keys in objects
remove-unused-variables = true       # remove unused variables

[tool.poetry.scripts]
roll-table = "rolltable.cli:app"
